--- a/src/main/resources/reports/nutrition/nutritionreport.jrxml
+++ b/src/main/resources/reports/nutrition/nutritionreport.jrxml
@@ -57,7 +57,6 @@
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
-	<group name="Group2"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -117,22 +116,14 @@
 			</frame>
 		</band>
 	</pageHeader>
-	<columnHeader>
-		<band height="42" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="0" width="100" height="30" uuid="34736e90-6677-4c01-8a39-8f5d661a4cae"/>
-				<text><![CDATA[Column Header]]></text>
-			</staticText>
-		</band>
-	</columnHeader>
 	<detail>
-		<band height="259" splitType="Stretch">
+		<band height="352" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<rectangle>
 				<reportElement x="298" y="0" width="256" height="230" uuid="e1e260d6-e380-41be-a3a2-f8cd7e7cdaf1"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="-2" y="0" width="260" height="230" uuid="0c12e952-fc87-4061-875f-22100b7949ff"/>
+				<reportElement x="2" y="0" width="260" height="230" uuid="0c12e952-fc87-4061-875f-22100b7949ff"/>
 			</rectangle>
 			<componentElement>
 				<reportElement x="28" y="15" width="200" height="200" uuid="546d9d23-8dd7-4ccd-9ed8-476db72675a7">
@@ -237,31 +228,14 @@
 					<itemLabel/>
 				</piePlot>
 			</pieChart>
-		</band>
-		<band height="214">
-			<property name="com.jaspersoft.studio.layout"/>
 			<subreport overflowType="Stretch">
-				<reportElement x="0" y="0" width="554" height="120" uuid="1eb76277-124c-4105-92cd-676b52cb8f51"/>
+				<reportElement x="0" y="250" width="556" height="70" uuid="1eb76277-124c-4105-92cd-676b52cb8f51">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
 				<parametersMapExpression><![CDATA[$P{foodParameter}]]></parametersMapExpression>
 				<dataSourceExpression><![CDATA[new JREmptyDataSource()]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{foodReport}]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="57" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="0" width="100" height="30" uuid="1b8adc89-1d21-4d60-aa00-a9e5c4c5e6cb"/>
-				<text><![CDATA[column footer]]></text>
-			</staticText>
-		</band>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch">
-			<staticText>
-				<reportElement x="0" y="0" width="100" height="30" uuid="a964a4e3-1a53-4c16-a23c-9ca985093d51"/>
-				<text><![CDATA[page footer]]></text>
-			</staticText>
-		</band>
-	</pageFooter>
 </jasperReport>
