--- a/src/main/resources/reports/nutrition/nutritionreport.jrxml
+++ b/src/main/resources/reports/nutrition/nutritionreport.jrxml
@@ -62,9 +62,10 @@
 	<parameter name="macroNutrientDataSet" class="net.sf.jasperreports.engine.data.JRBeanCollectionDataSource"/>
 	<parameter name="foodReport" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="foodParameter" class="java.util.Map"/>
-	<parameter name="foodParameter2" class="java.util.Map"/>
 	<parameter name="foodNutritionAlphaReport" class="net.sf.jasperreports.engine.JasperReport"/>
 	<parameter name="foodNutritionAlphaParameter" class="java.util.Map"/>
+	<parameter name="foodNutritionBarReport" class="net.sf.jasperreports.engine.JasperReport"/>
+	<parameter name="foodNutritionBarParameter" class="java.util.Map"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -128,7 +129,7 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="637" splitType="Stretch">
+		<band height="280" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<property name="com.jaspersoft.studio.layout"/>
 			<rectangle>
@@ -240,23 +241,14 @@
 					<itemLabel/>
 				</piePlot>
 			</pieChart>
+		</band>
+		<band height="176">
+			<property name="com.jaspersoft.studio.layout"/>
 			<subreport>
-				<reportElement positionType="Float" x="0" y="300" width="188" height="130" uuid="8e53b3d3-872b-4304-a870-eb3365763498">
+				<reportElement positionType="Float" x="2" y="23" width="188" height="130" uuid="8e53b3d3-872b-4304-a870-eb3365763498">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<parametersMapExpression><![CDATA[$P{foodParameter}]]></parametersMapExpression>
-				<dataSourceExpression><![CDATA[new JREmptyDataSource()]]></dataSourceExpression>
-				<subreportExpression><![CDATA[$P{foodReport}]]></subreportExpression>
-			</subreport>
-		</band>
-		<band height="102">
-			<property name="com.jaspersoft.studio.layout"/>
-			<subreport overflowType="Stretch">
-				<reportElement positionType="Float" x="0" y="16" width="195" height="70" uuid="1eb76277-124c-4105-92cd-676b52cb8f51">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<property name="com.jaspersoft.studio.unit.x" value="px"/>
-				</reportElement>
-				<parametersMapExpression><![CDATA[$P{foodParameter2}]]></parametersMapExpression>
 				<dataSourceExpression><![CDATA[new JREmptyDataSource()]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{foodReport}]]></subreportExpression>
 			</subreport>
@@ -267,6 +259,14 @@
 				<parametersMapExpression><![CDATA[$P{foodNutritionAlphaParameter}]]></parametersMapExpression>
 				<dataSourceExpression><![CDATA[new JREmptyDataSource()]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{foodNutritionAlphaReport}]]></subreportExpression>
+			</subreport>
+		</band>
+		<band height="230">
+			<subreport>
+				<reportElement x="0" y="10" width="200" height="120" uuid="951e4a19-b8b6-443f-8e5c-63ade4427c26"/>
+				<parametersMapExpression><![CDATA[$P{foodNutritionBarParameter}]]></parametersMapExpression>
+				<dataSourceExpression><![CDATA[new JREmptyDataSource()]]></dataSourceExpression>
+				<subreportExpression><![CDATA[$P{foodNutritionBarReport}]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
