--- a/src/main/resources/reports/nutrition/nutritionreport.jrxml
+++ b/src/main/resources/reports/nutrition/nutritionreport.jrxml
@@ -70,7 +70,90 @@
 		<![CDATA[]]>
 	</queryString>
 	<background>
-		<band splitType="Stretch"/>
+		<band height="802" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
+			<staticText>
+				<reportElement x="0" y="0" width="180" height="280" forecolor="#E8E8E8" uuid="45de5b56-3864-4f8e-9de9-503f81d21217">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="186" y="0" width="180" height="280" forecolor="#E8E8E8" uuid="9675f7dc-b787-4b7b-a16c-1548782af898">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="373" y="0" width="180" height="280" forecolor="#E8E8E8" uuid="5d5c1065-ef0f-408b-8ae4-3cd21a2c2250">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="1" y="257" width="180" height="280" forecolor="#E8E8E8" uuid="ec36fe94-6e20-436e-a949-d9c6df86c5bb">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="374" y="257" width="180" height="280" forecolor="#E8E8E8" uuid="8cf6c7de-7b8f-4ea6-8b01-4e6738a9b53f">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="187" y="257" width="180" height="280" forecolor="#E8E8E8" uuid="8ab03d69-23fc-4e0b-870d-ed09cfc1ce33">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="1" y="521" width="180" height="280" forecolor="#E8E8E8" uuid="8f9bc665-f09f-4ee3-a6eb-5fc18520a121">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="374" y="521" width="180" height="280" forecolor="#E8E8E8" uuid="cf20ead7-fdd7-4a0b-8849-6610e2d4eb56">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="187" y="521" width="180" height="280" forecolor="#E8E8E8" uuid="a89a944a-e763-4e5f-ac6b-721e35de993e">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
+					<font size="35" isBold="false" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Confidential]]></text>
+			</staticText>
+		</band>
 	</background>
 	<title>
 		<band height="87" splitType="Stretch">
@@ -270,4 +353,13 @@
 			</subreport>
 		</band>
 	</detail>
+	<pageFooter>
+		<band height="50">
+			<textField>
+				<reportElement x="453" y="8" width="100" height="30" uuid="5476e43f-a5ff-4f2d-a0e9-5a60c8b86b80"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageFooter>
 </jasperReport>
