--- a/src/main/resources/reports/nutrition/nutritionreport.jrxml
+++ b/src/main/resources/reports/nutrition/nutritionreport.jrxml
@@ -354,12 +354,16 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="50">
+		<band height="73">
 			<textField>
-				<reportElement x="453" y="8" width="100" height="30" uuid="5476e43f-a5ff-4f2d-a0e9-5a60c8b86b80"/>
+				<reportElement x="453" y="21" width="100" height="30" uuid="5476e43f-a5ff-4f2d-a0e9-5a60c8b86b80"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA["Page " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<image>
+				<reportElement x="1" y="11" width="50" height="50" uuid="5ae2c40e-f4d2-4f45-8a7a-b8187b22c2b9"/>
+				<imageExpression><![CDATA["D:/Download/food-nutrition.jpg"]]></imageExpression>
+			</image>
 		</band>
 	</pageFooter>
 </jasperReport>
