--- a/src/main/resources/reports/nutrition/barchart.jrxml
+++ b/src/main/resources/reports/nutrition/barchart.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.20.6.final using JasperReports Library version 6.20.6-5c96b6aa8a39ac1dc6b6bea4b81168e16dd39231  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="barchart" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="4b700fad-101b-4e17-8412-4f459bdfff40">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="barchart" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isFloatColumnFooter="true" uuid="4b700fad-101b-4e17-8412-4f459bdfff40">
     <property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
     <property name="com.jaspersoft.studio.unit." value="pixel"/>
     <property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
@@ -59,6 +59,7 @@
                 <chart evaluationTime="Report">
                     <reportElement x="0" y="0" width="250" height="200" uuid="f522302c-d2a6-49c1-92c8-46cb50a0210b">
                         <property name="com.jaspersoft.studio.unit.width" value="px"/>
+                        <property name="com.jaspersoft.layout.grid.weight.fixed" value="true"/>
                         <propertyExpression name="net.sf.jasperreports.chart.range.axis.tick.interval"><![CDATA[$P{axisTickInterval}]]></propertyExpression>
                     </reportElement>
                     <chartTitle/>
@@ -78,10 +79,10 @@
                     </categorySeries>
                 </categoryDataset>
                 <barPlot isShowLabels="true" isShowTickLabels="true" isShowTickMarks="true">
-                    <plot orientation="Horizontal"/>
+                    <plot labelRotation="0.0"/>
                     <itemLabel/>
-                    <categoryAxisFormat>
-                        <axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
+                    <categoryAxisFormat labelRotation="0.0">
+                        <axisFormat labelColor="#000000" tickLabelColor="#000000" verticalTickLabels="true" axisLineColor="#000000"/>
                     </categoryAxisFormat>
                     <valueAxisFormat>
                         <axisFormat labelColor="#000000" tickLabelColor="#000000" tickLabelMask="#,##0" axisLineColor="#000000"/>
@@ -109,8 +110,8 @@
                         <valueExpression><![CDATA[$F{value}]]></valueExpression>
                     </categorySeries>
                 </categoryDataset>
-                <barPlot>
-                    <plot orientation="Horizontal"/>
+                <barPlot isShowLabels="true" isShowTickLabels="true" isShowTickMarks="true">
+                    <plot/>
                     <itemLabel/>
                     <categoryAxisFormat>
                         <axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
